# rinha-de-backend-2024-q1-aiohttp

./: Dockerfile  Makefile  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
gicornachini/: app.py  db.py  handlers.py
