[tool.poetry]
name = "gicornachini"
version = "0.1.0"
description = ""
authors = ["Giovanni Cornachini"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.3"
uvloop = "^0.19.0"
gunicorn = "^21.2.0"
aiopg = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
